# ChelsioUwire

./: .gitignore  EULA  Makefile  dialog.py  install.py  sample_machinefile
RPM-Manager/: EULA  install.py  uninstall.py
RPM-Manager/config/: uname_r
RPM-Manager/config/compellent/: t5-config.txt
RPM-Manager/config/high_capacity_config/: t4-config.txt
RPM-Manager/config/high_capacity_rdma/: t4-config.txt
RPM-Manager/config/high_capacity_wd/: t4-config.txt
RPM-Manager/config/iscsi_perf_config/: t5-config.txt
RPM-Manager/config/low_latency_config/: t4-config.txt  t5-config.txt
RPM-Manager/config/memfree_config/: t5-config.txt
RPM-Manager/config/nec_config/: t4-config-nec-compute.txt
RPM-Manager/config/rdma_perf_config/: t5-config.txt
RPM-Manager/config/secure_config/: t5-config.txt
RPM-Manager/config/udp_so_config/: t4-config.txt  t5-config.txt
RPM-Manager/scripts/: cp_rpm_cluster_install.sh  get_logs.sh
Uboot/OptionROM/: ChelsioUD.efi  bootcfg
debrules/: Makefile
debrules/controls/bonding/: control  postinst
debrules/controls/bypass/: control  postinst
debrules/controls/bypass-utils/: control  postinst  prerm
debrules/controls/chfcoe/: control  postinst
debrules/controls/chiscsi/: control  postinst  postrm  preinst  prerm
debrules/controls/chiwarp/: control  postinst
debrules/controls/chutils/: control
debrules/controls/cxgbi/: control  postinst  postrm  preinst  prerm
debrules/controls/fcoe/: control  postrm
debrules/controls/firmware/: control  postinst  postrm  preinst
debrules/controls/libcxgb4/: control
debrules/controls/libcxgb4-devel/: control
debrules/controls/libcxgb4_sock/: control  postinst  prerm
debrules/controls/libcxgb4_sock_dbg/: control  postinst  prerm
debrules/controls/libcxgb4_udp/: control  postinst  postrm  prerm
debrules/controls/libcxgb4_udp_dbg/: control  postinst  prerm
debrules/controls/libwdtoe/: control  postinst  prerm
debrules/controls/libwdtoe_dbg/: control  postinst  prerm
debrules/controls/nic/: control
docs/: README.txt  Release Notes.txt
libs/: Makefile
libs/libcxgb4/: .gitignore  libcxgb4.spec.in
libs/libcxgb4/src/: qp.c  (+4 more)
libs/libcxgb4_sock/: COPYING  Makefile.am  configure.in  libcxgb4_sock.spec.in
libs/libcxgb4_sock/src/: endpoint.c  libcxgb4_sock.h  parser.y  route.c  scanner.l  sock.c
libs/libcxgb4_udp/: COPYING  Makefile.am  configure.in  libcxgb4_udp.spec.in
libs/libcxgb4_udp/examples/: crc.c  crc.h  udp_test.c
libs/libcxgb4_udp/include/chelsio/: cxgb4_udp.h  queue.h
libs/libcxgb4_udp/src/: libcxgb4_udp.map  udp.c
libs/librdmacm/: .gitignore
libs/libwdtoe/: AUTHORS  COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
libs/libwdtoe/examples/: wdtoe.conf
libs/libwdtoe/src/: atomic.h  buffer.c  buffer.h  chardev.c  chardev.h  common.h  conn_info.c  conn_info.h  cpl.c  cpl.h  debug.h  device.h  get_clock.c  kernelcom.c  kernelcom.h  libwdtoe.c  libwdtoe.h  mmap.c  mmap.h  ntuples.h  stats.c  stats.h  sysfns.h  t4.h
lustre/: lustre_kernel.patch
scripts/: check_deps.sh  chk_disk.sh  cp_debug_libs.sh  cp_libs.sh  cp_rpm_cluster_install.sh  cp_untar_install.sh  get_logs.sh  get_prerequisites.sh  merge_httpd_conf.sh  uninstall.py  uninstall_deb.py
specs/: Makefile  bonding.spec  bypass-utils.spec  bypass.spec  chelsio-utils.spec  chfcoe.spec  chiscsi.spec  chiwarp.spec  csiostor-scst.spec  csiostor.spec  cxgb4.spec  cxgb4ipv6.spec  cxgb4nic.spec  cxgb4toe.spec  cxgb4toeipv4.spec  cxgb4vf.spec  cxgb4wdtoe.spec  cxgbi.spec  firmware.spec  libcxgb4_sock.spec  libcxgb4_sock_dbg.spec  libcxgb4_udp.spec  libcxgb4_udp_dbg.spec  libwdtoe.spec  libwdtoe_dbg.spec  rdma_block.spec  sniffer.spec
src/: Makefile
src/chiscsi/: Makefile  README  README.scst  common_flags.mk  kernel_check.mk
src/cxgbi/: Makefile  common_flags.mk  cxgb_check.mk  cxgbi_compat.h  cxgbi_compat_libiscsi2.h  distro_check.mk  oiscsi_check.mk
src/network/: Makefile  README
src/oiscsi-v872/: Makefile
src/open-iscsi-2.0-873/: Makefile
src/patches/: 3.XGA.patch
src/rdma_block_dev/: Makefile  README.txt  TODO.txt  common.h  initiator.c  profile.c  profile.h  proto.h  rbd_compat.h  rbdi_dev.c  rbdi_dev.h  target.c
src/scst/: Makefile  scst.spec.in
tools/: 90-rdma.rules  Makefile  chdebug  chsetup  chstatus  t4-forward.sh  t4_latencytune.sh  t4_perftune.sh  wdload  wdunload
tools/ba_server/: Makefile  README  ba-rc
tools/chelsio_adapter_config_v4/: install.sh  uninstall.sh
tools/cop/: Makefile  bad_rules0  classifier.cc  classifier.h  cop.8  cop.cc  error.h  good_rules0  good_rules0.out  ipfilter.cc  ipfilter.h  offload_req.h  opt.c  vector.cc  vector.h
tools/cxgbtool/: Makefile  chstor_version.h  csio_defs.h  csio_foiscsi.c  csio_foiscsi.h  csio_foiscsi_ioctl.h  csio_hw.c  csio_hw.h  csio_oss.h  csio_services.c  csio_services.h  csio_t4.h  csio_um.h  cxgbtool.8  cxgbtool.c  cxgbtool_foiscsi_stor.c  cxgbtool_foiscsi_stor.h  cxgbtool_stor.h  cxgbtool_stor_params.h  reg_defs_t3.c  reg_defs_t3c.c  version.h
tools/rdma_tools/: Makefile
tools/t4_sniffer/: Makefile
tools/um/: RPM-GPG-KEY-Chelsio-Uwire-mgmt
(+921 files in other folders)
