#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(libcxgb4_sock, 1.0.0, linux-rdma@vger.kernel.org)
AC_CONFIG_SRCDIR([src/libcxgb4_sock.h])
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(libcxgb4_sock, 1.0.0)

AC_CANONICAL_HOST
AM_MAINTAINER_MODE

AC_DISABLE_STATIC
AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h netinet/in.h stdlib.h string.h sys/socket.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_REPLACE_FNMATCH
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([dup2 memset socket strcasecmp strchr strdup strpbrk strrchr strtoul])

# check OS
case "${host}" in
i[[3456]]86-*-linux*) AC_DEFINE(LINUX_BUILD, 1, [OS is linux]) ac_cv_linux_build="yes" ;;
esac

AM_CONDITIONAL(LINUX_BUILD, test "$ac_cv_linux_build" = "yes")

AC_CONFIG_FILES([Makefile libcxgb4_sock.spec])
AC_OUTPUT
